static/css/styles.css
/* Google font import */
@import url('https://fonts.googleapis.com/css2?family=Inder&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Racing+Sans+One&display=swap');

/* Variables for website colour scheme and fonts */
:root {
    /* Colour variables */
    --fuschia-blue: #845ABF;
    --eclectic: #AAB1BF;
    --eclectic-transparent: rgba(170, 177, 191, 0.4);
    --skylla: #2182BF;
    --nasturtium-shoot: #88A649;
    --ecstatic-red: #A6121F;
    --vivid-yellow: #D9A404;
    /* Font variables */
    --main-header: "Racing Sans One";
    --sub-heading: "Prompt";
    --main-text: "Inder"
}

/* Linear gradient colour for the body using root variables */
body {
    background-image: linear-gradient(90deg,
            var(--ecstatic-red) 0%,
            var(--skylla) 20%,
            var(--fuschia-blue) 80%,
            var(--nasturtium-shoot) 100%);
    font-family: var(--main-text);
}

/* Styling for the main container, applied to all pages */
main {
    padding-top: 2rem;
    position: relative;
}

/* Anchor links styled to match colour scheme */
a {
    color: var(--skylla);
}

/* H1 styling for the two titles.
Linear gradient styling in theme colours. */
h1 {
    font-family: var(--main-header);
    font-style: italic;
    margin-bottom: 0;
    padding: 0 12px 0 0;
    background: linear-gradient(90deg, var(--ecstatic-red) 0%, var(--vivid-yellow) 45%, var(--skylla) 100%);
    background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
}

/* Heading and title styling from h2-h6 plus card titles, uses a root variable for font family */
h2,
h3,
h5,
h6,
.card-title {
    font-family: var(--sub-heading);
    font-style: italic;
}

div label {
    display: block;
    margin-bottom: 5px;
}

select {
    border-radius: 16px;
    padding: 10px;
    width: 180px;
}

/* Style options inside a select */
option {
    font-size: 1rem;
    background-color: var(--ecstatic-red);
}

/* Positions the messages div near the top of the main container */
#messages {
    top: 45px;
    position: absolute;
}

/* Allocates available horizontal space in the nav bar equally between nav items */
.nav-item {
    flex-basis: 0;
    flex-grow: 1;
    text-align: center;
}

/* Block and height/width applied so the entire nav-link item becomes clickable */
.nav-link {
    display: block;
    width: 100%;
    height: 100%;
    font-style: italic;
}

/* Hover styling for nav items and nav links */
.nav-item:hover {
    background-color: var(--vivid-yellow);
    cursor: pointer;
    transition: 0.5s ease-in;
}

.nav-link:hover {
    transition: 0.5s ease-in;
    font-weight: bold;
    color: #000000;
}

/* Styling for active nav-items - implements a dashed border */
.navbar .nav-item.active {
    background-color: var(--vivid-yellow);
    border: 2px dashed var(--skylla);
    cursor: pointer;
}

/* Styles the nav-link text for active nav-items */
.navbar .nav-item.active .nav-link {
    color: #000000;
    font-weight: bold;
}

/* Hero background image applied to main container only on the home page */
.hero-bg {
    background-image: url(../images/hero-image.avif);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top center;
}

/* Glassmorphic effect for cards and forms */
.glassmorphic {
    background: var(--eclectic-transparent);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    border: 1px solid rgba(255, 255, 255, 0.3);
}

/* Match the top corner border radius of card image, to the same px as the card itself. */
.card-img-top {
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
}

/* Initially hides the shop cards while the loaders are spinning */
.shop-card {
    display: none;
    transition: transform .2s;
    border: 2px solid transparent;
}

/* Shop cards enlargen on hover with a glow effect */
.shop-card:hover {
    transform: scale(1.1);
    z-index: 99;
    border: 2px solid #dadada;
    border-radius: 16px;
    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

/* Rarity colours for shop card badges */
.badge.common {
    background-color: var(--eclectic);
    color: black;
}

.badge.uncommon {
    background-color: var(--nasturtium-shoot);
    color: black;
}

.badge.rare {
    background-color: var(--skylla);
    color: black;
}

.badge.epic {
    background-color: var(--fuschia-blue);
}

.badge.legendary {
    background-color: var(--vivid-yellow);
}

.badge.mythic {
    background-color: gold;
}

/* Custom buy button for the shop cards, skewed to match nav items */
.buy-button,
.account-button {
    background-color: var(--vivid-yellow);
    color: black;
    transform: skew(-30deg);
    border-radius: 0;
}

.cancel {
    background-color: var(--ecstatic-red);
    color: black;
    transform: skew(-30deg);
    border-radius: 0;
}

/* Unskew class applied to the buy button span text unmutate it */
.unskew {
    display: inline-block;
    transform: skew(30deg);
    font-style: italic;
    padding: 3px;
    font-weight: bold;
}

/* Buy button changes colour and pulses on hover */
.buy-button:hover,
.account-button:hover {
    background-color: var(--skylla);
    color: white;
    transform: skew(-30deg);
    animation: pulse 2s infinite;
}

/* Pulsing animation used on hovering over the buy now button, skewed to match the button */
@keyframes pulse {
    0% {
        transform: scale(0.95);
        transform: skew(-30deg);
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
    }

    70% {
        transform: scale(1);
        transform: skew(-30deg);
        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
    }

    100% {
        transform: scale(0.95);
        transform: skew(-30deg);
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    }
}

/* Spinning loader while the dom loads content and the file content pulls through to the cards */
.loader {
    border-top: 16px solid var(--ecstatic-red);
    border-right: 16px solid var(--skylla);
    border-bottom: 16px solid var(--fuschia-blue);
    border-left: 16px solid var(--nasturtium-shoot);
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
}

/* Spinning animations for screen loader on shop page */
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* Hover colour for the round socials icons */
.socials-hover:hover {
    background-color: var(--vivid-yellow);
    border-radius: 50%;
}

/* Hover colour for the square socials icon */
.socials-hover-square:hover {
    background-color: var(--vivid-yellow);
    border-radius: 5%;
}

/* Media queries start here */
/* Media query for screens 320px and up */
@media screen and (min-width:320px) {
    footer {
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
    }

    .nav-link {
        color: white;
    }

    h1 {
        font-size: 2rem;
    }

    #shop-section {
        padding-bottom: 100px;
    }

    main {
        padding-left: 20px;
        padding-right: 20px;
        margin-top: 50px;
    }

    .shop-card {
        min-width: 270px;
        min-height: 300px;
    }

    .shop-card img {
        height: 300px;
    }
}

/* Media query for screens 768px and up */
@media screen and (min-width:768px) {
    h1 {
        font-size: 2.5rem;
    }

    .navbar-nav {
        width: 40%;
    }

    #shop-section {
        padding-bottom: 0;
    }

    .shop-card {
        min-width: 320px;
        min-height: 320px;
    }

    .shop-card img {
        height: 400px;
    }
}

/* media query for screens 1024px and up*/
@media screen and (min-width:1024px) {
    .nav-link {
        color: black;
    }

    h1 {
        font-size: 1.8rem;
    }

    .navbar-nav {
        width: 97%;
    }

    /* Skew transform applied to create forward-leaning nav items */
    .nav-item {
        background-color: var(--skylla);
        transform: skew(-30deg);
    }

    /* Opposite skew applied to the nav link so the text looks straight */
    .nav-link {
        transform: skew(30deg);
        display: inline-block;
        text-decoration: none;
    }

    .shop-card {
        min-width: 360px;
        min-height: 320px;
    }
}

/* media query for screens 1440px and up*/
@media screen and (min-width:1440px) {

    h1 {
        font-size: 2.3rem;
    }

    .navbar-nav {
        width: 85%;
        padding-right: 10px;
    }

    .nav-link {
        font-size: 1.2rem;
    }
}

/* media query for screens 1700px and up*/
@media screen and (min-width:1700px) {

    h1 {
        font-size: 2.6rem;
    }

    .nav-link {
        font-size: 1.2rem;
    }
}

/* Media query for screens 2560px and up */
@media screen and (min-width:2560px) {
    footer {
        padding-top: 1.2rem;
        padding-bottom: 1.2rem;
        font-size: 1.9rem;
    }

    h1 {
        font-size: 4rem;
    }

    p {
        font-size: 1.8rem;
    }

    select {
        font-size: 1.5rem;
        margin-bottom: 15px;
    }

    div label {
        margin-top: 15px;
        font-size: 1.4rem;
    }

    .hero-card .card-title,
    .heading {
        font-size: 3rem;
    }

    h3,
    h4,
    h5,
    h6 {
        font-size: 2.4rem;
    }

    #messages {
        top: 80px;
    }

    .navbar {
        padding-top: 1.2rem;
        padding-bottom: 1.2rem;
        padding-left: 20px;
        font-size: 1.9rem;
    }

    h1 {
        font-size: 4rem;
        padding: 0 48px 0 10px;
    }

    .navbar-nav {
        padding-right: 30px;
    }

    .nav-link {
        font-size: 2rem;
    }

    #hero-section {
        max-width: 2200px;
        max-height: 1000px;
    }

    #hero-section .col {
        padding: 0 1.2rem 2.5rem 1.2rem;
    }

    .hero-card {
        font-size: 1.8rem;
        padding: 2.2rem;
    }

    #shop-heading {
        margin-top: 6rem !important;
    }

    .shop-card {
        min-width: 400px;
        min-height: 320px;
    }

    .badge {
        font-size: 1.1rem;
    }

    .buy-button {
        font-size: 1.4rem;
    }
}

